# make-structs-public-macro

./: Cargo.toml  LICENSE  README.md
make-fields-public/: Cargo.toml
make-fields-public/src/: lib.rs
src/: main.rs  test_structs.rs
