[package]
name = "make-fields-public"
version = "0.1.0"
edition = "2021"
description = "Macro that makes structs and their fields public"
license = "MIT"
homepage = "https://github.com/VanOvermeire/make-structs-public-macro"
repository = "https://github.com/VanOvermeire/make-structs-public-macro"
documentation = "https://github.com/VanOvermeire/make-structs-public-macro"

[dependencies]
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"]}

[lib]
proc-macro = true
